--- a/src/components/Projects/ProjectGrid/ProjectGrid.css
+++ b/src/components/Projects/ProjectGrid/ProjectGrid.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 36px;
-  grid-row-gap: 48px
+  grid-row-gap: 48px;
 }
 
 @media (max-width: 848px) {
@@ -13,4 +13,3 @@
     grid-row-gap: 48px
   }
 }
-
