--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
+@font-face {
+  font-family: 'Teko';
+  src: url('/public/media/Teko/Teko-Regular.ttf');
+}
+
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Teko';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Teko';
 }
